--- a/_config.yml
+++ b/_config.yml
@@ -15,8 +15,8 @@ name                     : &name "Sunny Yasser"
 description              : &description "Sunny Yasser's academic portfolio"   # Update this with a general description of your site, this is the default if not overridden by a page
 url                      : https://yassersun.github.io # The base hostname & protocol for your site e.g. "https://[your GitHub username].github.io",
                                                            # or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
-baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "yassersun/yassersun.github.io"
+baseurl                  : "/me" # the subpath of your site, e.g. "/blog"
+repository               : "yassersun/me"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
